@@ -6,7 +6,7 @@ check_PROGRAMS = tests
 
 TESTS = tests
 
-tests_SOURCES = main.cpp joint.cpp odemath.cpp
+tests_SOURCES = main.cpp joint.cpp odemath.cpp joints/fixed.cpp
 
 tests_LDFLAGS = $(builddir)/UnitTest++/src/libunittestpp.la \
             $(top_builddir)/ode/src/libode.la
